# cornflakes

./: .gitignore  BUGS.org  CMakeLists.txt  README.md  Reademe.md  Roadmap.org  contributors.txt  cornflakes.cmake.in  env.bash.conf.in  env.conf.in  env.csh.conf.in  testA.py  testB.py  test_flow2.py
cornflakes/: Assemble.py  Dofmap.py  GraphIO.py  Graphers.py  Hypergraph.py  ParticlePlacers.py  SpatialHash.py  __init__.py  dofmap.py
cornflakes/hypergraph/: Assemble.py  Graphers.c  Graphers.h  Makefile  Roadmap.org  SpatialHash.c  assemble.c  assemble.h  cornflakes_library_swig.i  dofmap.py  graphers.c  graphers.h  graphio.py  hypergraph.c  hypergraph.h  hypergraph.py  hypergraph_swig.i  kernel.c  kernel.h  mylibrary.py  particle_placers.py  pyHypergraph.py  spatialhash.c  spatialhash.h  test.py  test2dholecrack.py  test3d.py
cornflakes/src/: CMakeLists.txt  Makefile  assemble.c  assemble.h  cfdata.c  cfdata.h  cfdata_default.c  cfdata_lis.c  cfdata_lis.h  cfdata_petsc.c  cfdata_petsc.h  cfmat.c  cfmat.h  cfmat_default.c  cfmat_default.h  cfmat_lis.c  cfmat_petsc.h  cornflakes.h  cornflakes_library_swig.i  darcy_afq_state.c  dofmap.c  dofmap.h  graphers.c  graphers.h  hypergraph.c  kernel.c  kernel.h  lis_target.c  lis_target.h  petsc_target.c  petsc_target.h  sample_kernels.c  sample_peri.c  sample_state.c  sample_state.h  spatialhash.c  spatialhash.h  target.c  target.h  util.c  (+1 more)
cornflakes/src/kernels/: CMakeLists.txt  darcy_afq_CG.c  darcy_afq_CG.h  darcy_afq_state.c  darcy_afq_state.h  darcy_state.c  darcy_state.h  darcy_support_afq_state.c  darcy_support_afq_state.h
cornflakes/src/oldkernels/: sample_kernels.c  sample_kernels.h  sample_state.c
cornflakes/units/: __init__.py  dofmap_t_test.py  grapherstest.py  graphtest.py  hashtest.py  test_nonuniform_mesh.py
doc/: literature.md  philosophy.md
examples/: custom map-op.ipynb  spring_example.ipynb
examples/demo/: script.py  spring.pop.py
examples/pair_bond/: line_check.py  pair_bond.py  script.py
examples/rkpm/: exhaustive_study.ipynb  rkpm_kernel_walkthrough.ipynb  rkpm_lib.py  rkpm_new.ipynb  rkpm_study.ipynb  util.py
scripts/: test2dholecrack.py  test_flow.py
src/: assemble.c  assemble.h  assemble_omp.c  cfdata.c  cfdata.h  cfdata_bc.c  cfdata_bc.h  cfdata_default.c  cfdata_default.h  cfdata_lis.c  cfdata_petsc.c  cfmat.c  cfmat.h  cfmat_bc.c  cfmat_bc.h  cfmat_csr.c  cfmat_csr.h  cfmat_default.c  cfmat_default.h  cfmat_lis.c  cfmat_lis.h  cfmat_lis_2.c  cfmat_lis_2.h  cfmat_petsc.c  cornflakes.h  cornflakes_library_swig.i  dofmap.c  dofmap.h  fill_sparsity.c  fill_sparsity.h  filter.c  filter.h  graphers.c  graphers.h  hypergraph.h  indexmap.c  indexmap.h  indexset.c  indexset.h  kernel.c  (+13 more)
src/trash/: assemble_omp.h
src/trash/oldkernels/: sample_peri.h
superbuild/: CMakeLists.txt  Dockerfile  Readme.md  welcome.sh
test/: dofmap_test.py  good_gmsh_v4.msh  graphio_test.py
units/: CMakeLists.txt  test_assemble_csr.c  test_cfmat_bc.c  test_fill_sparsity.c  test_filter.c  test_filter.py  test_index_set.c  test_indexmap.c  test_sparsity_pattern.c
